HelloUltraviolet/Fixtures/RejectedSource/Expressions/ArraySliceIndexDiagnostics/Expected.uv
//! Expected diagnostic metadata for the ArraySliceIndexDiagnostics rejected-source specimen.

expectedDiagnostic("E-UNS-0103", "req.16.ArraySliceIndexDiagnosticsAndPanicBehavior")
